customtests/tests/expected/results1.err
tests/results1.scala:16: error: mutability mismatch:
 found   : AnyRef @readonly
 required: AnyRef(results1.this.u1)
	u1 = f_r1()  // should error
                 ^
tests/results1.scala:19: error: mutability mismatch:
 found   : AnyRef @readonly
 required: AnyRef @mutable(results1.this.m1)
	m1 = f_r1()  // should error
                 ^
two errors found
